objects/Contract_summary__c.object
<CustomObject>
    <description>All signed contract with customers</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer name</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Value_of_Contract__c</fullName>
        <description>The annual value of the contract.</description>
        <inlineHelpText>Please enter the value in USD.</inlineHelpText>
        <label>Annual Value of Contract</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Coordinator__c</fullName>
        <label>CSC Coordinator</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract signed with</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_details__c</fullName>
        <description>Contract details</description>
        <label>Contract details</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_duration_in_months__c</fullName>
        <formula>(Contract_end__c - Contract_start__c)*12/365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract  duration in months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_end__c</fullName>
        <description>When the contract will end</description>
        <label>Contract end</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_start__c</fullName>
        <description>When the contract will start</description>
        <label>Contract start</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>ALL COUNTRIES</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BOSNIA/HERZEGOV</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
                <value>
                    <fullName>BRUNEI</fullName>
                </value>
                <value>
                    <fullName>BULGARIA</fullName>
                </value>
                <value>
                    <fullName>BURKINA FASO</fullName>
                </value>
                <value>
                    <fullName>BURUNDI</fullName>
                </value>
                <value>
                    <fullName>CAMEROON</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>CENTRAL AFRICA</fullName>
                </value>
                <value>
                    <fullName>CHAD</fullName>
                </value>
                <value>
                    <fullName>CHILE</fullName>
                </value>
                <value>
                    <fullName>CHINA</fullName>
                </value>
                <value>
                    <fullName>COLOMBIA</fullName>
                </value>
                <value>
                    <fullName>CONGO</fullName>
                </value>
                <value>
                    <fullName>CROATIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_contract_ref__c</fullName>
        <description>Customer contract reference</description>
        <label>Customer contract ref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FCPA_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If customer = distributor or partner, a valid (&lt;14 months) FCPA contract needs to be signed and loaded in SFDC</description>
        <inlineHelpText>If customer = distributor or partner, a valid (&lt;14 months) FCPA contract needs to be signed and loaded in SFDC</inlineHelpText>
        <label>Is FCPA signed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_commitment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer financial commitment</description>
        <label>Financial commitment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indefinite_Period__c</fullName>
        <inlineHelpText>Please tick this box if the contract renews automatically every year.</inlineHelpText>
        <label>Indefinite Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the requested insurance coverage exceed the coverage provided by our insurances (basic coverage: $2M/incident; $4M/calendar year)? If yes, has the exceed coverage been approved by the respective functions? If yes, please tick the box if not, please leave blank.</description>
        <inlineHelpText>Does the requested insurance coverage exceed the coverage provided by our insurances (basic coverage: $2M/incident; $4M/calendar year)? If yes, has the exceed coverage been approved by the respective functions? If yes, tick the box if not, leave blank.</inlineHelpText>
        <label>Insurance Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Liabability_Clause__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is a liability clause mentioned in the contract which limits our exposure to direct damages only (e.g. no liability for lost profits and business interruptions; we must request a monetary cap of our liability which should not exceed the annual contract value x1 per calendar year)?</description>
        <inlineHelpText>Is a liability clause which limits our exposure to direct damages only (eg no liability for lost profits &amp; biz interruptions; we must request monetary cap of our liability which should not exceed the annual contract value x1 per CY)? Tick box for Yes.</inlineHelpText>
        <label>Liabability Clause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Order_Quantity__c</fullName>
        <description>(Minimum Order Quantity) is set in SAP under the following conditions:
 MTS Parts : MOQ= PPQ (Primary Packaging Quantity).
 PPQ is set by Engineering in SAP under supervision of Coding Manager (Michael Aron) and PM.
MTO Parts: MOQ  = MLS (Minimum Lot Size). 
MLS is set by Coding Manager and PM
It is possible to get a different MOQ on different customer categories as Direct or Distributors.
CSS is not allowed to modify any MOQ without Derek’s approval.</description>
        <inlineHelpText>Please select one of the options.</inlineHelpText>
        <label>Minimum Order Quantity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MOQ is standard as set in SAP.</fullName>
                </value>
                <value>
                    <fullName>Special request has been made, waiting approval.</fullName>
                </value>
                <value>
                    <fullName>Special request has been made and approved.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_Order_Value__c</fullName>
        <description>MOV – Minimum Order Value needs to be set at 350€: no order below this amount can be entered without Derek Ferguson’s approval.</description>
        <inlineHelpText>Please select one of the options</inlineHelpText>
        <label>Minimum Order Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MOV is less than 350€: (no approval required)</fullName>
                </value>
                <value>
                    <fullName>MOV is greater than 350€: (approval requested, waiting approval)</fullName>
                </value>
                <value>
                    <fullName>MOV is greater than 350€: (approval given by Derek Ferguson)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Future Opportunity linked to current contract</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_terms__c</fullName>
        <label>Payment terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Penalties__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Penalties on late delivery and/or faulty products: Is a clear amount limitation written in the contract?  Please tick for yes or leave blank for no.</description>
        <inlineHelpText>Penalties on late delivery and/or faulty products: Is a clear amount limitation written in the contract?  Please tick for yes or leave blank for no.</inlineHelpText>
        <label>Penalties Clause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Revision__c</fullName>
        <description>Prices can be reviewed during contract life</description>
        <label>Price Revision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Biannual</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_deviation_vs_price_list__c</fullName>
        <description>Price deviation vs price list, or vs current tender needs an approval via SFDC.</description>
        <inlineHelpText>Please select from the list.</inlineHelpText>
        <label>Price deviation vs price list</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No price deviation, no approval required.</fullName>
                </value>
                <value>
                    <fullName>Price deviation exists, approval requested.</fullName>
                </value>
                <value>
                    <fullName>Price deviation exists, approval received via SFDC.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prices_are_EXW_factory_IncoTerms_2010__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prices are EXW factory (Incoterms 2010).</description>
        <inlineHelpText>If prices comply, please tick the box, if not please leave blank.</inlineHelpText>
        <label>Prices are EXW factory (IncoTerms 2010)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Families_included_in_Contract__c</fullName>
        <label>Product Families included in Contract</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quality_Assurance_Requirements__c</fullName>
        <description>Are there specific logistics or QA requirements in the agreement? If yes, have they been approved by the respective functions? Please tick for Yes or leave blank for no.</description>
        <inlineHelpText>Are there specific logistics or QA requirements in the agreement? If yes, have they been approved by the respective functions? Please tick for Yes or leave blank for no.</inlineHelpText>
        <label>Quality Assurance Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quotation_validity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All quotations should be valied for 60 days maximum (except on a specific agreement).</description>
        <inlineHelpText>If the quotation is valid for 60 days please tick the box, if not, please leave blank.</inlineHelpText>
        <label>Quotation validity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSD__c</fullName>
        <description>Regional Sales Director</description>
        <inlineHelpText>Regional Sales Director</inlineHelpText>
        <label>RSD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CIS/RUSSIA</fullName>
                </value>
                <value>
                    <fullName>EAST EUROPE</fullName>
                </value>
                <value>
                    <fullName>GERMANY</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>MEA</fullName>
                </value>
                <value>
                    <fullName>NORDIC</fullName>
                </value>
                <value>
                    <fullName>SOUTH EUROPE</fullName>
                </value>
                <value>
                    <fullName>SWITZERLAND</fullName>
                </value>
                <value>
                    <fullName>UK/MEA</fullName>
                </value>
                <value>
                    <fullName>UK &amp; BENELUX</fullName>
                </value>
                <value>
                    <fullName>WEST EUROPE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSM__c</fullName>
        <description>RSM</description>
        <label>RSM</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RSD__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AMERICA LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>AMERICA NA INDUSTRIAL</fullName>
                </value>
                <value>
                    <fullName>AMERICA NA OEM</fullName>
                </value>
                <value>
                    <fullName>AMERICA NA UTILITY</fullName>
                </value>
                <value>
                    <fullName>AMERICA RETAIL</fullName>
                </value>
                <value>
                    <fullName>Anhui</fullName>
                </value>
                <value>
                    <fullName>ASEAN</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>BALTICS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM/LUXEMBOURG/NETHERLANDS</fullName>
                </value>
                <value>
                    <fullName>EAST AFRICA</fullName>
                </value>
                <value>
                    <fullName>EAST EUROPE</fullName>
                </value>
                <value>
                    <fullName>FRANCE</fullName>
                </value>
                <value>
                    <fullName>Fujian</fullName>
                </value>
                <value>
                    <fullName>Gansu</fullName>
                </value>
                <value>
                    <fullName>GERMANY</fullName>
                </value>
                <value>
                    <fullName>GERMANY AXICOM</fullName>
                </value>
                <value>
                    <fullName>GERMANY INDUSTRIAL</fullName>
                </value>
                <value>
                    <fullName>GERMANY UTILITY</fullName>
                </value>
                <value>
                    <fullName>GERMANY WHOLESALER</fullName>
                </value>
                <value>
                    <fullName>GREECE &amp; CYPRUS</fullName>
                </value>
                <value>
                    <fullName>Guizhou</fullName>
                </value>
                <value>
                    <fullName>GULF &amp; PAKISTAN</fullName>
                </value>
                <value>
                    <fullName>Hainan</fullName>
                </value>
                <value>
                    <fullName>Hebei</fullName>
                </value>
                <value>
                    <fullName>Heilongjiang</fullName>
                </value>
                <value>
                    <fullName>Henan</fullName>
                </value>
                <value>
                    <fullName>HKTW</fullName>
                </value>
                <value>
                    <fullName>HongKong</fullName>
                </value>
                <value>
                    <fullName>Hubei</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Dates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For all contract customers, the request dates should be equal to (not lower than) that contractual agreed lead times.</description>
        <inlineHelpText>If the request dates comply please tick if not, please leave blank.</inlineHelpText>
        <label>Request Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_delivery_time__c</fullName>
        <defaultValue>&quot;4 weeks&quot;</defaultValue>
        <description>Requested delivery time agreed in the contract</description>
        <label>Requested delivery time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STR_Leadtime_loaded_into_SAP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>STR LT loaded into SAP &gt;14 days on MTO parts and &gt;7 days on MTS parts (including EDI orders).  If shorter delivery time is requested, logistics terms (customer forecast) in the contract needs to be clearly mentioned.</description>
        <inlineHelpText>Please tick if this complies, if not, please leave blank.</inlineHelpText>
        <label>STR Leadtime loaded into SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signed_by_TESOG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TESOG General Terms and Conditions of Business is mandatory (since November 2011).  They are available on: http://www.te.com/aboutus/tandc.asp</description>
        <inlineHelpText>Contract has been signed by TESOG</inlineHelpText>
        <label>Signed by TESOG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stats_to_be_send__c</fullName>
        <description>Is TE needs to send to customer sales stats on a regular basis?</description>
        <label>Stats to be send on a regular period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Biannual</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TE_Contract_ref__c</fullName>
        <description>Tyco Electronics contract reference</description>
        <label>TE Contract ref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TE_Market_Share__c</fullName>
        <description>MS of TE on this contract</description>
        <formula>IF(Total_Market__c &gt; 0, TE_Market__c/Total_Market__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TE Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TE_Market__c</fullName>
        <description>Size of TE market</description>
        <label>TE Market</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TE_market_year__c</fullName>
        <description>TE Market per year</description>
        <formula>IF(( Contract_end__c - Contract_start__c ) &gt; 0,
365* TE_Market__c /( Contract_end__c - Contract_start__c ), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TE market/year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Market__c</fullName>
        <description>Total market (tender value), including competition MS</description>
        <label>Total Market</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <description>Is the warranty period requested by the customer longer than 24 months from delivery?  If yes, has product management approved to go beyond 24 months? If yes, please select the number of year(s) warranty.</description>
        <inlineHelpText>Is the warranty period requested by the customer longer than 24 months from delivery?  If yes, has product management approved to go beyond 24 months? If yes, please select the number of year(s) warranty.</inlineHelpText>
        <label>Product Warranty in year&apos;s</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>&gt;25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Written_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does a written contract exist with this customer / potential new customer?</description>
        <inlineHelpText>Does a written contract exist with this customer / potential new customer?  Please tick box for YES or leave blank for No.</inlineHelpText>
        <label>Written Contract</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EMEA_CONTRACTS</fullName>
        <columns>RSD__c</columns>
        <columns>NAME</columns>
        <columns>RSM__c</columns>
        <columns>Country__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RSD__c</field>
            <operation>equals</operation>
            <value>WEST EUROPE,SOUTH EUROPE,UK/MEA,CIS/RUSSIA,GERMANY</value>
        </filters>
        <label>EMEA CONTRACTS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Contracts1</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Contract_start__c</columns>
        <columns>Contract_end__c</columns>
        <columns>Signed_by_TESOG__c</columns>
        <columns>Stats_to_be_send__c</columns>
        <columns>TE_Market__c</columns>
        <columns>TE_market_year__c</columns>
        <columns>TE_Market_Share__c</columns>
        <columns>Total_Contract_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>WE_active_contracts</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Contract_duration_in_months__c</columns>
        <columns>Contract_start__c</columns>
        <columns>Contract_end__c</columns>
        <columns>FCPA_Included__c</columns>
        <columns>Financial_commitment__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Penalties__c</columns>
        <columns>Requested_delivery_time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RSD__c</field>
            <operation>equals</operation>
            <value>Marc Benoit</value>
        </filters>
        <label>WE  active contracts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validation_on_CountryRSMRSD</fullName>
        <active>false</active>
        <description>If Opportunity is left blank, kindly enter the Country - RSM - RSD</description>
        <errorConditionFormula>AND((Opportunity__c=NULL),
OR(
ISPICKVAL(Country__c ,&quot;&quot;),
ISPICKVAL(RSD__c,&quot;&quot;),
ISPICKVAL(RSM__c,&quot;&quot;)))</errorConditionFormula>
        <errorMessage>If Opportunity is left blank, kindly enter the Country - RSM - RSD</errorMessage>
    </validationRules>
</CustomObject>